--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     color: maroon}
     #githubLink{
         color: blue;
-        text-decoration: underline;}    
+        text-decoration: underline;}  
+    a {
+        text-decoration: none;}      
     </style>
 </head>
 <body>
@@ -48,89 +50,89 @@
             <th>Github Link</th>
         </tr>
         <tr>
-            <td id="repoName">Module 1 : 01-HTML</td>
-            <td id="githubLink"><a href="https://lilyjuly.github.io/Module-1-01-Html/">Module-1-01-Html</a></td>
+            <td id="repoName"><a href="https://lilyjuly.github.io/Module-1-01-Html/"> Module 1 : 01-HTML</a></td>
+            <td id="githubLink">https://lilyjuly.github.io/Module-1-01-Html/</td>
         </tr>
         <tr>
-            <td id="repoName">Module 1 : 02-Attributes</td>
-            <td id="githubLink"><a href="https://lilyjuly.github.io/Module-1-02-Attributes/">Module-1-02-Attributes</a></td>
+            <td id="repoName"><a href="https://lilyjuly.github.io/Module-1-02-Attributes/">Module 1 : 02-Attributes</a></td>
+            <td id="githubLink">https://lilyjuly.github.io/Module-1-02-Attributes/</td>
         </tr>
         <tr>
             <tr>
-                <td id="repoName">Module 1 : 03-CSS Selector</td>
-                <td id="githubLink"><a href=" https://lilyjuly.github.io/Moldue-1-03-css-selector/">Moldue-1-03-css-selector</a></td>
+                <td id="repoName"><a href=" https://lilyjuly.github.io/Moldue-1-03-css-selector/">Module 1 : 03-CSS Selector</a></td>
+                <td id="githubLink">https://lilyjuly.github.io/Moldue-1-03-css-selector/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 1 : 04-Box Model</td>
-                <td id="githubLink"><a href="https://lilyjuly.github.io/Moldue-1-04-Box-Model/">Moldue-1-04-Box-Model</a></td>
+                <td id="repoName"><a href="https://lilyjuly.github.io/Moldue-1-04-Box-Model/">Module 1 : 04-Box Model</a></td>
+                <td id="githubLink">https://lilyjuly.github.io/Moldue-1-04-Box-Model/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 1 : 05-CSS Positioning</td>
-                <td id="githubLink"><a href="https://lilyjuly.github.io/Moldue-1-05-css-positioning/">05-css-positioning</a></td>
+                <td id="repoName"><a href="https://lilyjuly.github.io/Moldue-1-05-css-positioning/">Module 1 : 05-CSS Positioning</a></td>
+                <td id="githubLink">https://lilyjuly.github.io/Moldue-1-05-css-positioning/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 1 : Challenge</td>
-                <td id="githubLink"><a href="https://lilyjuly.github.io/urban-octo-telegra-challenge/">urban-octo-telegra-challenge</a></td>
+                <td id="repoName"><a href="https://lilyjuly.github.io/urban-octo-telegra-challenge/">Module 1 : Challenge</a></td>
+                <td id="githubLink">https://lilyjuly.github.io/urban-octo-telegra-challenge/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 2 : 01-Wireframing</td>
-                <td id="githubLink"><a href="https://docs.google.com/presentation/d/1oESZTzq35B6puc2G0oR0mkDimP22S_TvPwlJ0a5WU4g/edit?usp=sharing">presentation/d/1oESZTzq35B6puc2G0oR0mkDimP22S_TvPwlJ0a5WU4g/edit?usp=sharing</a></td>
+                <td id="repoName"><a href="https://docs.google.com/presentation/d/1oESZTzq35B6puc2G0oR0mkDimP22S_TvPwlJ0a5WU4g/edit?usp=sharing">Module 2 : 01-Wireframing</a></td>
+                <td id="githubLink">https://docs.google.com/presentation/d/1oESZTzq35B6puc2G0oR0mkDimP22S_TvPwlJ0a5WU4g/edit?usp=sharing</td>
             </tr>
             <tr>
-                <td id="repoName">Module 2 : 02-Flexbox Layout</td>
-                <td id="githubLink"><a href="https://lilyjuly.github.io/02-flexbox-layout/">02-flexbox-layout</a></td>
+                <td id="repoName"><a href="https://lilyjuly.github.io/02-flexbox-layout/">Module 2 : 02-Flexbox Layout</a></td>
+                <td id="githubLink">https://lilyjuly.github.io/02-flexbox-layout/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 2 : 03-Responsive Design</td>
-                <td id="githubLink"><a href=" https://lilyjuly.github.io/03-Responsive-Design/">03-Responsive-Design</a></td>
+                <td id="repoName"><a href="https://lilyjuly.github.io/03-Responsive-Design/">Module 2 : 03-Responsive Design</a>    </td>
+                <td id="githubLink">https://lilyjuly.github.io/03-Responsive-Design/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 02 : 04-Pseudo Classes</td>
-                <td id="githubLink"><a href=" https://lilyjuly.github.io/04-pseudo-class/">04-pseudo-class</a></td>
+                <td id="repoName"><a href=" https://lilyjuly.github.io/04-pseudo-class/">Module 02 : 04-Pseudo Classes</a></td>
+                <td id="githubLink"> https://lilyjuly.github.io/04-pseudo-class/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 02 : 05-CSS Variables</td>
-                <td id="githubLink"><a href=" https://lilyjuly.github.io/05-Varibles/">05-Varibles</a></td>
+                <td id="repoName"><a href=" https://lilyjuly.github.io/05-Varibles/">Module 02 : 05-CSS Variables</a></td>
+                <td id="githubLink"> https://lilyjuly.github.io/05-Varibles/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 2 : Challenge</td>
-                <td id="githubLink"><a href="https://lilyjuly.github.io/myslef/">myslef</a></td>
+                <td id="repoName"><a href="https://lilyjuly.github.io/myslef/">Module 2 : Challenge</a></td>
+                <td id="githubLink">https://lilyjuly.github.io/myslef/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 1/2 : Run-Buddy Project</td>
-                <td id="githubLink"><a href="https://run-buddy.github.io/Hi-G4/">run-buddy.github.io/Hi-G4</a></td>
+                <td id="repoName"><a href="https://run-buddy.github.io/Hi-G4/">Module 1/2 : Run-Buddy Project</a></td>
+                <td id="githubLink">https://run-buddy.github.io/Hi-G4/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 03 : 01-Conditional Statement</td>
-                <td id="githubLink"><a href=" https://lilyjuly.github.io/01-Condition/">01-Condition</a></td>
+                <td id="repoName"><a href="https://lilyjuly.github.io/01-Condition/">Module 03 : 01-Conditional Statement</a></td>
+                <td id="githubLink">https://lilyjuly.github.io/01-Condition/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 03 : 02-Iteration</td>
-                <td id="githubLink"><a href="https://lilyjuly.github.io/02-iteration/">02-iteration</a></td>
+                <td id="repoName"><a href="https://lilyjuly.github.io/02-iteration/">Module 03 : 02-Iteration</a></td>
+                <td id="githubLink">https://lilyjuly.github.io/02-iteration/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 03 : 03-Functions</td>
-                <td id="githubLink"><a href="https://lilyjuly.github.io/03-Functions/">03-Functions</a></td>
+                <td id="repoName"><a href="https://lilyjuly.github.io/03-Functions/">Module 03 : 03-Functions</a></td>
+                <td id="githubLink">https://lilyjuly.github.io/03-Functions/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 03 : 04-Scope</td>
-                <td id="githubLink"><a href=" https://lilyjuly.github.io/04-scope/">04-scope</a></td>
+                <td id="repoName"><a href="https://lilyjuly.github.io/04-scope/">Module 03 : 04-Scope</a></td>
+                <td id="githubLink">https://lilyjuly.github.io/04-scope/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 03 : 05-Object This</td>
-                <td id="githubLink"><a href="https://lilyjuly.github.io/05-Objectthis/">05-Objectthis</a></td>
+                <td id="repoName"><a href="https://lilyjuly.github.io/05-Objectthis/">Module 03 : 05-Object This</a></td>
+                <td id="githubLink">https://lilyjuly.github.io/05-Objectthis/</td>
             </tr>
             <tr>
-                <td id="repoName">03.Algorithms : 01-arithmetic</td>
-                <td id="githubLink"><a href="https://lilyjuly.github.io/01-arithmetic/">01-arithmetic</a></td>
+                <td id="repoName"><a href=" https://lilyjuly.github.io/01-arithmetic/">03.Algorithms : 01-arithmetic</a></td>
+                <td id="githubLink"> https://lilyjuly.github.io/01-arithmetic/</td>
             </tr>
             <tr>
-                <td id="repoName">03.Algorithms : 02-odd-or-even</td>
-                <td id="githubLink"><a href="https://lilyjuly.github.io/02-odd-or-even/">02-odd-or-even</a></td>
+                <td id="repoName"><a href="https://lilyjuly.github.io/02-odd-or-even/">03.Algorithms : 02-odd-or-even</a></td>
+                <td id="githubLink">https://lilyjuly.github.io/02-odd-or-even/</td>
             </tr>
             <tr>
-                <td id="repoName">03.Algorithms : 03-log-nums</td>
-                <td id="githubLink"><a href="https://lilyjuly.github.io/03-log-nums/">03-log-nums</a></td>
+                <td id="repoName"><a href="https://lilyjuly.github.io/03-log-nums/">03.Algorithms : 03-log-nums</a></td>
+                <td id="githubLink">https://lilyjuly.github.io/03-log-nums/</td>
             </tr>
             <tr>
                 <td id="repoName">Module 3 : Challenge</td>
