--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
         color: blue;
         text-decoration: underline;}  
     a {
-        text-decoration: none;}      
+        color: goldenrod;
+        text-decoration: none;} 
+    a:hover{
+        color: rgb(170,147,16);
+    }         
     </style>
 </head>
 <body>
@@ -76,7 +80,7 @@
             </tr>
             <tr>
                 <td id="repoName"><a href="https://docs.google.com/presentation/d/1oESZTzq35B6puc2G0oR0mkDimP22S_TvPwlJ0a5WU4g/edit?usp=sharing">Module 2 : 01-Wireframing</a></td>
-                <td id="githubLink">https://docs.google.com/presentation/d/1oESZTzq35B6puc2G0oR0mkDimP22S_TvPwlJ0a5WU4g/edit?usp=sharing</td>
+                <td id="githubLink">01-Wireframing</td>
             </tr>
             <tr>
                 <td id="repoName"><a href="https://lilyjuly.github.io/02-flexbox-layout/">Module 2 : 02-Flexbox Layout</a></td>
@@ -135,30 +139,30 @@
                 <td id="githubLink">https://lilyjuly.github.io/03-log-nums/</td>
             </tr>
             <tr>
-                <td id="repoName">Module 3 : Challenge</td>
-                <td id="githubLink"><a href=""></a></td>
+                <td id="repoName"><a href="">Module 3 : Challenge</a></td>
+                <td id="githubLink">---</td>
             </tr>
             <tr>
-                <td id="repoName">Module 3 : Con Solo Game MVP Project</td>
-                <td id="githubLink"><a href=""></a></td>
+                <td id="repoName"><a href="">Module 3 : Con Solo Game MVP Project</a></td>
+                <td id="githubLink">---</td>
             </tr>
             <tr>
-                <td id="repoName">Module 4 : 01-Create-Append</td>
-                <td id="githubLink"><a href=""></a></td>
+                <td id="repoName"><a href="">Module 4 : 01-Create-Append</a></td>
+                <td id="githubLink">---</td>
             </tr>
             <tr>
-                <td id="repoName">Module 4 : </td>
-                <td id="githubLink"></td>
+                <td id="repoName"><a href="">Module 4 : </a></td>
+                <td id="githubLink">---</td>
             </tr>
             <tr>
-                <td id="repoName">Module 4 : </td>
-                <td id="githubLink"></td>
+                <td id="repoName"><a href="">Module 4 : </a></td>
+                <td id="githubLink">---</td>
             </tr><tr>
-                <td id="repoName">Module 4 : </td>
-                <td id="githubLink"></td>
+                <td id="repoName"><a href="">Module 4 : </a></td>
+                <td id="githubLink">---</td>
             </tr><tr>
-                <td id="repoName">Module 4 : </td>
-                <td id="githubLink"></td>
+                <td id="repoName"><a href="">Module 4 : </a></td>
+                <td id="githubLink">---</td>
             </tr>
 
         </tr>
